--- a/base.scss
+++ b/base.scss
@@ -1,10 +1,14 @@
-//$breakpoint-mobile: 768px;
+$breakpoint-mobile: 768px;
 
 * {
   padding: 0;
   margin: 0;
 }
+
+
+
 // OPENING PAGE
+
 .opening-hexs {
   width: 768px;
 
@@ -21,8 +25,8 @@
     width: 60%;
   }
 }
-// LANDING PAGE SECTION
-.background {
+  // LANDING PAGE SECTION
+section {
   width: 768px;
   height: 1200px;
 
@@ -30,15 +34,7 @@
   border: solid 3px red;
   padding: 5px;
   margin: 5px;
-
-  img {
-    max-width: 100%;
-    max-height: 100%; 
-  }
-  &__image {
-    position: absolute;
-    z-index: 2;
-  }
+  
   &__capture {
     position: absolute;
     top: 0;
@@ -53,6 +49,22 @@
     position: absolute;
     top: 600px;
     z-index: 5;
+  }
+}
+@media  (orientation: portrait) {
+  .background {
+    background-image: url('Mobile images/background1.jpg');
+    background-size: 100%;
+    background-repeat: none;
+    z-index: 2;
+  }
+}
+@media  (orientation: landscape) {
+  .background {
+    background-image: url('Mobile images/background2.jpg');
+    background-size: 100%;
+    background-repeat: none;
+    z-index: 2;
   }
 }
 
