--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
   width: 60%;
 }
 
-.background {
+section {
   width: 768px;
   height: 1200px;
   position: relative;
@@ -25,30 +25,38 @@
   padding: 5px;
   margin: 5px;
 }
-.background img {
-  max-width: 100%;
-  max-height: 100%;
-}
-.background__image {
-  position: absolute;
-  z-index: 2;
-}
-.background__capture {
+section__capture {
   position: absolute;
   top: 0;
   z-index: 5;
 }
-.background__develop {
+section__develop {
   position: absolute;
   top: 300px;
   z-index: 5;
 }
-.background__create {
+section__create {
   position: absolute;
   top: 600px;
   z-index: 5;
 }
 
+@media (orientation: portrait) {
+  .background {
+    background-image: url("Mobile images/background1.jpg");
+    background-size: 100%;
+    background-repeat: none;
+    z-index: 2;
+  }
+}
+@media (orientation: landscape) {
+  .background {
+    background-image: url("Mobile images/background2.jpg");
+    background-size: 100%;
+    background-repeat: none;
+    z-index: 2;
+  }
+}
 .hexs {
   width: 768px;
   height: 1400px;
@@ -139,3 +147,7 @@
 }
 
 /* section hexagaons */
+body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: white;
+}
