--- a/base.scss
+++ b/base.scss
@@ -53,15 +53,15 @@ section {
 }
 @media  (orientation: portrait) {
   .background {
-    background-image: url('Mobile images/background1.jpg');
+    background-image: url('Mobile images/11Background-portrait.png');
     background-size: 100%;
-    background-repeat: none;
+    background-repeat: no-repeat;
     z-index: 2;
   }
 }
 @media  (orientation: landscape) {
   .background {
-    background-image: url('Mobile images/background2.jpg');
+    background-image: url('Mobile images/backgroundlandscape.jpg');
     background-size: 100%;
     background-repeat: none;
     z-index: 2;
@@ -69,48 +69,47 @@ section {
 }
 
 // ABOUT SECTION
-.hexs {
+section {
   width: 768px;
   height: 1400px;
 
-  position: relative;
   border: solid 3px red;
   padding: 5px;
   margin: 5px;
 
   &__jemmaholmes {
-    max-width: 100%;
-    position: absolute;
-    top: 0px;
-    right: 0px;
+    width: 80%;
+    height: auto;
+
+    position: relative;
   }
-  &__hex12 {
-    transform: rotate(90deg);
-    width: 400px;
-    position: absolute;
-    top: 300px;
-    right: 0px;
-  }
-  &__hex1 {
-    max-height: 60%;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
+  .hexs {
+    width: 60%;
+    height: 60%;
+
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
   }
 }  
   
 // PROJECTS SECTION
-.projects {
+main {
   width: 768px;
   height: 1200px;
 
-  position: relative;
   border: solid 3px red;
   padding: 5px;
   margin: 5px;
 
   button {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
     border: none;
+    background-color: #C4C4C4;
     color: white;
     padding: 15px 32px;
     text-decoration: none;
@@ -120,41 +119,19 @@ section {
     cursor: pointer;
     z-index: 5;
   }
+}
 
-  img {
-
-    max-width: 100%;
-    max-height: 100%; 
-  }
-  &__project-home {
-    position: absolute;
-    z-index: 2;
-  }
-  &__projects {
-    position: absolute;
-    top: 300;
-    z-index: 5;
-  }
-  &__project-one {
-    position: absolute;
-    top: 400;
-    z-index: 5;
-  }
-  &__project-two {
-    position: absolute;
-    top: 400;
-    z-index: 5;
-  }
-  &__project-three {
-    position: absolute;
-    top: 600;
-    z-index: 5;
-  }
+.projects {
+  background-image: url('Mobile images/projectbackground2.jpg');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  z-index: 2;
 }
 
 // // CONTACT SECTION
 .bottom-hexs {
   width: 768px;
+  height: 250px;
 
   display: flex;
   justify-content: space-between 0px;
