--- a/main.css
+++ b/main.css
@@ -3,127 +3,251 @@
   margin: 0;
 }
 
-.opening-hexs {
-  width: 768px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: solid 3px red;
-  padding: 5px;
-  margin: 5px;
-}
-.opening-hexs img {
-  width: 60%;
-}
-
-section {
-  width: 768px;
-  height: 1200px;
-  position: relative;
-  border: solid 3px red;
-  padding: 5px;
-  margin: 5px;
-}
-section__capture {
-  position: absolute;
-  top: 0;
-  z-index: 5;
-}
-section__develop {
-  position: absolute;
-  top: 300px;
-  z-index: 5;
-}
-section__create {
-  position: absolute;
-  top: 600px;
-  z-index: 5;
-}
-
 @media (orientation: portrait) {
+  .opening-hexs {
+    width: 768px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  .opening-hexs img {
+    width: 60%;
+  }
+
+  section {
+    width: 786px;
+    height: auto;
+    position: relative;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+
   .background {
-    background-image: url("Mobile images/11Background-portrait.png");
+    background-image: url("Mobile images/1.Background-portrait.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     z-index: 2;
   }
+
+  .background__capture {
+    width: 35%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    z-index: 5;
+  }
+  .background__develop {
+    width: 35%;
+    height: auto;
+    position: absolute;
+    top: 300px;
+    z-index: 5;
+  }
+  .background__create {
+    width: 35%;
+    height: auto;
+    position: absolute;
+    top: 600px;
+    z-index: 5;
+  }
+
+  section {
+    width: 758px;
+    height: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  section img {
+    width: 80%;
+    height: auto;
+  }
+
+  .hexs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hexs img {
+    height: 35%;
+    width: 35%;
+  }
+
+  main {
+    width: 768px;
+    height: 1400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between 40px;
+    justify-content: center;
+    align-items: center;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  main button {
+    width: 200px;
+    border: none;
+    background-color: #C4C4C4;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 22px;
+    margin: 4px 2px;
+    cursor: pointer;
+    z-index: 5;
+  }
+
+  .projects {
+    background-image: url("Mobile images/projectbackground2.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: 2;
+  }
+
+  .bottom-hexs {
+    width: 768px;
+    height: 250px;
+    display: flex;
+    justify-content: space-between 0px;
+    justify-content: center;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  .bottom-hexs img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
+/* section hexagaons */
+body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: white;
+}
+
 @media (orientation: landscape) {
+  .opening-hexs {
+    width: 1200px;
+    height: auto;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  .opening-hexs img {
+    width: 33%;
+    height: 33%;
+  }
+
+  section {
+    width: 1200px;
+    height: 768;
+    position: relative;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+
   .background {
     background-image: url("Mobile images/backgroundlandscape.jpg");
     background-size: 100%;
     background-repeat: none;
     z-index: 2;
   }
-}
-section {
-  width: 768px;
-  height: 1400px;
-  border: solid 3px red;
-  padding: 5px;
-  margin: 5px;
-}
-section__jemmaholmes {
-  width: 80%;
-  height: auto;
-  position: relative;
-}
-section .hexs {
-  width: 60%;
-  height: 60%;
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-items: center;
-}
 
-main {
-  width: 768px;
-  height: 1200px;
-  border: solid 3px red;
-  padding: 5px;
-  margin: 5px;
-}
-main button {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border: none;
-  background-color: #C4C4C4;
-  color: white;
-  padding: 15px 32px;
-  text-decoration: none;
-  font-size: 22px;
-  margin: 4px 2px;
-  cursor: pointer;
-  z-index: 5;
-}
+  .background__capture {
+    width: 30%;
+    height: 30%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+  }
+  .background__develop {
+    width: 30%;
+    height: 30%;
+    position: absolute;
+    top: 0px;
+    left: 500px;
+    z-index: 5;
+  }
+  .background__create {
+    width: 30%;
+    height: 30%;
+    position: absolute;
+    top: 0px;
+    right: 0;
+    z-index: 5;
+  }
 
-.projects {
-  background-image: url("Mobile images/projectbackground2.jpg");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  z-index: 2;
-}
+  section {
+    width: 1200px;
+    height: 700px;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  section img {
+    width: 50%;
+  }
 
-.bottom-hexs {
-  width: 768px;
-  height: 250px;
-  display: flex;
-  justify-content: space-between 0px;
-  justify-content: center;
-  border: solid 3px red;
-  padding: 5px;
-  margin: 5px;
-}
-.bottom-hexs img {
-  max-width: 100%;
-  max-height: 100%;
-}
+  .hexs img {
+    width: 33%;
+    height: auto;
+  }
 
-/* section hexagaons */
-body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  color: white;
+  main {
+    width: 1200px;
+    height: 600px;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  main button {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+    background-color: #C4C4C4;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 22px;
+    margin: 4px 2px;
+    cursor: pointer;
+    z-index: 5;
+  }
+
+  .projects {
+    background-image: url("Mobile images/backgroundlandscape.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: 2;
+  }
+
+  .bottom-hexs {
+    width: 1200px;
+    height: 200px;
+    display: flex;
+    justify-content: space-between 0px;
+    justify-content: center;
+    align-items: baseline;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  .bottom-hexs img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
