--- a/layout.scss
+++ b/layout.scss
@@ -2,3 +2,142 @@ body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: white;
 }
+
+// // LANDSCAPE
+
+@media  (orientation: landscape) {
+  
+  // OPENING PAGE
+  .opening-hexs {
+    width: 1200px;
+    height: auto;
+
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+
+    img {
+      width: 33%;
+      height: 33%;
+    }
+  }
+  // LANDING PAGE SECTION
+  section {
+    width: 1200px;
+    height: 768;
+
+    position: relative;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+  }
+  .background {
+    background-image: url('Mobile images/backgroundlandscape.jpg');
+    background-size: 100%;
+    background-repeat: none;
+    z-index: 2;
+  }
+  
+  .background {
+    &__capture {
+      width: 30%;
+      height: 30%;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 5;
+    }
+    &__develop {
+      width: 30%;
+      height: 30%;
+
+      position: absolute;
+      top: 0px;
+      left: 500px;
+      z-index: 5;
+    }
+    &__create {
+      width: 30%;
+      height: 30%;
+
+      position: absolute;
+      top: 0px;
+      right: 0;
+      z-index: 5;
+    }
+  }
+
+  // ABOUT SECTION
+  section {
+    width: 1200px;
+    height: 700px;
+
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+
+    img {
+      width: 50%;
+    }
+  }
+    
+  .hexs img {
+    width: 33%;
+    height: auto;
+  }
+   
+    
+  // PROJECTS SECTION
+  main {
+    width: 1200px;
+    height: 600px;
+
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+
+    button {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+
+      border: none;
+      background-color: #C4C4C4;
+      color: white;
+      padding: 15px 32px;
+      text-decoration: none;
+      
+      font-size: 22px;
+      margin: 4px 2px;
+      cursor: pointer;
+      z-index: 5;
+    }
+  }
+
+  .projects {
+    background-image: url('Mobile images/backgroundlandscape.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: 2;
+  }
+
+  // CONTACT SECTION
+  .bottom-hexs {
+    width: 1200px;
+    height: 200px;
+
+    display: flex;
+    justify-content: space-between 0px;
+    justify-content: center;
+    align-items: baseline;
+    border: solid 3px red;
+    padding: 5px;
+    margin: 5px;
+
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+}
