--- a/components.scss
+++ b/components.scss
@@ -2,35 +2,36 @@
 .opening-hexs {
   img {
     width: 33%;
+    height: auto;
   }
 }
 
 // LANDING PAGE
 .background {
   &__capture {
-    width: 35%;
-    height: 35%;;
+    width: 20%;
+    height: 20%;
   }
   &__develop {
-    width: 35%;
-    height: 35%;;
+    width: 20%;
+    height: 20%;
   }
   &__create {
-    width: 35%;
-    height: 35%;;
+    width: 20%;
+    height: 20%;
   }
 }
 
 // ABOUT SECTION
 .about {
   &__jemmaholmes {
-    width: 80%;
-    height: 80%;
+    width: 40%;
+    height: 40%;
   }
 }
 .hexs img {
-    height: 35%;
-    width: 35%;
+    height: 30%;
+    width: 30%;
 }
 
 // PROJECTS SECTION
@@ -53,15 +54,27 @@
 // CONTACT PAGE
 .contact {
   &__linkedin {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 60%;
+    max-height: 60%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 10%;
   }
   &__instagram {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 60%;
+    max-height: 60%;
+    position: absolute;
+    bottom: 0;
+    left: 45%;
+    margin: 10%;
   }
   &__github {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 60%;
+    max-height: 60%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 10%;
   }
 }
