--- a/base.scss
+++ b/base.scss
@@ -1,3 +1,8 @@
+
+$color-pink: #EE00FF;
+$color-grey: #C4C4C4;
+$color-white: #FFFFFF;
+
 * {
   padding: 0;
   margin: 0;
@@ -7,22 +12,11 @@
 
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: white;
-}
-
-header {
-  width: 100vw;
-  height: 100vh;
-  border: solid 3px red;
-  padding: 5px;
-  margin: 5px;
+  color: $color-white;
 }
 
 section {
-  width: 100vw;
-  height: 100vh;
-  border: solid 3px red;
+  border: solid 3px $color-pink;
   padding: 5px;
   margin: 5px;
 }
-
