--- a/components.scss
+++ b/components.scss
@@ -1,6 +1,14 @@
 // SPLASH PAGE
 .opening-hexs {
-  img {
+  &__grey {
+    width: 33%;
+    height: auto;
+  }
+  &__me {
+    width: 33%;
+    height: auto;
+  }
+  &__pink {
     width: 33%;
     height: auto;
   }
@@ -9,24 +17,24 @@
 // LANDING PAGE
 .background {
   &__capture {
-    width: 20%;
-    height: 20%;
+    width: 30%;
+    height: auto;
   }
   &__develop {
-    width: 20%;
-    height: 20%;
+    width: 30%;
+    height: auto;
   }
   &__create {
-    width: 20%;
-    height: 20%;
+    width: 30%;
+    height: auto;
   }
 }
 
 // ABOUT SECTION
 .about {
   &__jemmaholmes {
-    width: 40%;
-    height: 40%;
+    height: 30%;
+    width: auto;
   }
 }
 .hexs img {
