--- a/_components.scss
+++ b/_components.scss
@@ -1,5 +1,6 @@
 // SPLASH PAGE
 .opening-hexs {
+  animation: opening-hexs 1s ease-in forwards;
   &__grey {
     width: 33%;
     height: auto;
@@ -13,6 +14,19 @@
     height: auto;
   }
 }
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
+}
+.opening-hexs.display-none {
+  opacity: 0;
+  z-index: -10;
+  animation: opening-hexs 1s ease-in forwards;
+}
+
+
 
 // LANDING PAGE
 .background {
